labs/res-edge-labs/kustomize/apps/heartbeat/kustomize/prod/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartbeat
  namespace: heartbeat
  annotations:
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
  - secretName: heartbeat
    hosts:
    - ist.cluster.domain
  rules:
  - host: ist.cluster.domain
    http:
      paths:
      - pathType: Prefix
        path: /heartbeat
        backend:
          service:
            name: heartbeat
            port:
              number: 8080
